--- a/views/blog/create.ejs
+++ b/views/blog/create.ejs
@@ -102,7 +102,7 @@
         <div class="header">
             <h1>Create New Post</h1>
         </div>
-        <form action="/blog" method="POST" enctype="multipart/form-data" id="postForm">
+        <form action="/blog/" method="POST" enctype="multipart/form-data" id="postForm">
             <div class="form-group">
                 <label for="title">Title</label>
                 <input type="text" id="title" name="title" required>
