--- a/views/users/logout.ejs
+++ b/views/users/logout.ejs
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logout</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>Logout</h1>
-    <p>Are you sure you want to logout?</p>
-    <form action="/users/logout" method="get">
-        <button type="submit">Logout</button>
-    </form>
+    <div id="react-root"></div>
+    <script src="/dist/bundle.js"></script>
 </body>
 </html>
